# ur3_ros_assignment_2

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  fake_controllers.yaml  ur3.srdf
launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_moveit_controller_manager.launch.xml  warehouse.launch
script/: gripper_service_client.py  gripper_service_server.py
srv/: GripperControl.srv  LEDControl.srv
urdf/: arm_with_grippe_limited.urdf.xacro  arm_with_gripper.urdf.xacro  base.urdf  gripper.urdf
